make before publishing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rsvp": "x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "make"
   },
   "keywords": [
     "mustache",
